--- a/layout/board.html
+++ b/layout/board.html
@@ -36,14 +36,38 @@
         
         <!-- content -->
         <main>
+            <div class="clearfix py-0">
+                <a href="board_write.html" class="btn btn-primary btn-sm float-end"><i class="fa-solid fa-pen-fancy"></i>글쓰기</a>
+            </div>
             <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">공지</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">공지</a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">공지</a>
-                <a href="#" class="list-group-item list-group-item-action">기본글</a>
-                <a href="#" class="list-group-item list-group-item-action">기본글</a>
-                <a href="#" class="list-group-item list-group-item-action">기본글</a>
-                <a href="#" class="list-group-item list-group-item-action">기본글</a>
+                <div class="list-group-item small">
+                    <div class="row text-center align-items-center small text-muted">
+                        <div class="col-1 small">글번호</div>
+                        <div class="col-1 small">카테고리</div>
+                        <div class="col text-start">제목</div>
+                        <div class="col-1  small">작성일</div>
+                        <div class="col-1  small">조회수</div>
+                    </div>
+                </div>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">
+                    <div class="row text-center align-items-center small text-muted">
+                        <div class="col-1 small">1</div>
+                        <div class="col-1 small">자유</div>
+                        <div class="col text-start fw-bold text-black">제목</div>
+                        <div class="col-1  small"><span class="small">25.06.13</span></div>
+                        <div class="col-1  small"><span class="small">13</span></div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                    <div class="row text-center align-items-center small text-muted">
+                        <div class="col-1 small">1</div>
+                        <div class="col-1 small">자유</div>
+                        <div class="col text-start fw-bold text-black">제목 <span class="small text-danger fw-bold">1</span></div>
+                        <div class="col-1  small"><span class="small">25.06.13</span></div>
+                        <div class="col-1  small"><span class="small">13</span></div>
+                    </div>
+                </a>
+
             </div>
         </main>
     </div>
