--- a/layout/board_write.html
+++ b/layout/board_write.html
@@ -13,9 +13,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.22.1/ckeditor.js"></script>
 </head>
 
-<body> 
+<body>
     <!-- header -->
     <header id="header">
         <h1>더 조은 아카데미 레이아웃</h1>
@@ -36,27 +37,21 @@
         
         <!-- content -->
         <main>
-            <div class="content float-start">
-                <div class="slider ">
-                <img src="https://bxslider.com/assets/plant-bd76206132f914fc54fd28f9794f7fe346bb8b9a9d16dd5de830b93f365eea9c.jpg" alt="이미지 슽라이더">
-                <img src="https://bxslider.com/assets/daisies-aef04136667e60d9190943f4c6cd605043e67188247ffe928500edfd29b0a158.jpg" alt="이미지 슽라이더">
-                <img src="https://bxslider.com/assets/succulents-7b5637dbc01af703069905a7991d9e7e7d27c680fa885fe3d6c713c1f77c0f92.jpg" alt="이미지 슽라이더">
+            <div class="small border-bottom border-3 border-primary p-0 pb-2">
+                <a href="#" class="small"> <span class="test-primary">자유게시판</span><span class="text-dark">카테고리</span></a>
+            </div>
+            <div class="small p-0 py-2">
+                <input placeholder="title" class="form-control" name="title" id="title">
+            </div>
+            <div class="p-0 py-5 ps-1 small border-bottom border-1 border-muted">
+                <textarea name="content" id="editor1" class="form-control resize-none"></textarea>
+            </div>
+            <div>
+                <button class="btn btn-secondary btn-sm"> <i class="fa-solid fa-list-ul"></i> 목록</button>
+                <div class="float-end">
+                    <button class="btn btn-outline-primary btn-sm"><i class="fa-solid fa-pen-fancy"></i>글쓰기</button>
                 </div>
             </div>
-
-            <aside class="float-start">
-                <div class="account">
-                    <p>네이버를 더 안전하고 편리하게 이용하세요</p>
-                    <a href="https://nid.naver.com/nidlogin.login?mode=form&url=https://www.naver.com/"><i>NAVER</i>로그인</a>
-                    <div>
-                        <a href="https://nid.naver.com/user2/api/route?m=routeIdInquiry">아이디 찾기</a>
-                        <i></i>
-                        <a href="https://nid.naver.com/user2/api/route?m=routePwInquiry">비밀번호 찾기</a>
-                        <i></i>
-                        <a href="https://nid.naver.com/nidregister.form?url=https%3A%2F%2Fwww.naver.com">회원가입</a>
-                    </div>
-                </div>
-            </aside>
         </main>
     </div>
     <!-- footer -->
@@ -79,6 +74,12 @@
                 $(".arrow-area i").fadeOut(150);
             }
         })
+        window.onload = function(){
+            CKEDITOR.replace('editor1', {
+                height:400
+            })
+        }
+        
     </script>
 </body>
 
