--- a/layout/board_write.html
+++ b/layout/board_write.html
@@ -37,21 +37,25 @@
         
         <!-- content -->
         <main>
-            <div class="small border-bottom border-3 border-primary p-0 pb-2">
-                <a href="#" class="small"> <span class="test-primary">자유게시판</span><span class="text-dark">카테고리</span></a>
-            </div>
-            <div class="small p-0 py-2">
-                <input placeholder="title" class="form-control" name="title" id="title">
-            </div>
-            <div class="p-0 py-5 ps-1 small border-bottom border-1 border-muted">
-                <textarea name="content" id="editor1" class="form-control resize-none"></textarea>
-            </div>
-            <div>
-                <button class="btn btn-secondary btn-sm"> <i class="fa-solid fa-list-ul"></i> 목록</button>
-                <div class="float-end">
-                    <button class="btn btn-outline-primary btn-sm"><i class="fa-solid fa-pen-fancy"></i>글쓰기</button>
+            <form>
+                <div class="small border-bottom border-3 border-primary p-0 pb-2">
+                    <a href="#" class="small"> <span class="test-primary">자유게시판</span><span class="text-dark">카테고리</span></a>
                 </div>
-            </div>
+                <div class="small p-0 py-2">
+                    <input placeholder="title" class="form-control" name="title" id="title">
+                </div>
+                <div class="p-0 py-5 ps-1 small border-bottom border-1 border-muted">
+                    <textarea name="content" id="editor1" class="form-control resize-none"></textarea>
+                </div>
+                <div>
+                    <button class="btn btn-secondary btn-sm"> <i class="fa-solid fa-list-ul"></i> 목록</button>
+                    <div class="float-end">
+                        <button class="btn btn-outline-primary btn-sm"><i class="fa-solid fa-pen-fancy"></i>글쓰기</button>
+                    </div>
+                </div>
+                <input type="hidden" name="id" value="" />
+                <input type="hidden" name="con" value="2" />
+            </form>
         </main>
     </div>
     <!-- footer -->
@@ -63,17 +67,7 @@
        <a href="#header"> <i class="fa-regular fa-circle-up"></i></a>
     </div>
     <script>
-        $(".slider").bxSlider({auto:true, mode:'horizontal'});
-
-        $(window).scroll(function(e){
-            // console.log(e);
-            console.log(window.scrollY);
-            if(window.scrollY > 500){
-                $(".arrow-area i").fadeIn(150);
-            }else{
-                $(".arrow-area i").fadeOut(150);
-            }
-        })
+        
         window.onload = function(){
             CKEDITOR.replace('editor1', {
                 height:400
